# api/controllers/trials.js
@@ -1,4 +1,5 @@
 const Trial = require('../models/trial');
+const Record = require('../models/record');
 
 function getTrial(req, res) {
   const id = req.swagger.params.id.value;
@@ -18,6 +19,25 @@ function getTrial(req, res) {
     });
 }
 
+function getRecord(req, res) {
+  const id = req.swagger.params.id.value;
+
+  return new Record({ id: id }).fetch({ withRelated: Record.relatedModels })
+    .catch((err) => {
+      res.finish();
+      throw err;
+    })
+    .then((record) => {
+      if (record) {
+        res.json(record);
+      } else {
+        res.status(404);
+        res.finish();
+      }
+    });
+}
+
 module.exports = {
   get: getTrial,
+  getRecord,
 }
